--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-DB_DATABASE=C:\Users\Casi\Herd\WebDev_lab3\database\database.sqlite
+DB_DATABASE=C:\Users\maean\OneDrive\Desktop\Documents\GitHub\WebDev_GroupLab3\database\database.sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
