--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:9aDoPziTPRvj4GtyejW5qvzxPwuLdGUgIxr5HJNLELc=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Manila #Make sure this is correctly set
 APP_URL=http://webdevgrouplab2.test
 
 APP_LOCALE=en
